chown $PLUSHU_USER w/ login group (plushu/plushu#43)

--- a/install
+++ b/install
@@ -4,5 +4,5 @@ set -eo pipefail; [[ -n "$PLUSHU_TRACE" ]] && set -x
 # Make the root directory for repos
 mkdir -p "$PLUSHU_ROOT/repos"
 if [[ "$EUID" == 0 ]]; then
-  chown -R "$PLUSHU_USER" "$PLUSHU_ROOT/repos"
+  chown -R "$PLUSHU_USER:" "$PLUSHU_ROOT/repos"
 fi
